@@ -33,7 +33,27 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
 import|;
 end_import
 
@@ -84,6 +104,16 @@ name|KEYRING
 init|=
 operator|new
 name|HashMap
+argument_list|()
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|Set
+name|SECURED_HOSTS
+init|=
+operator|new
+name|HashSet
 argument_list|()
 decl_stmt|;
 specifier|public
@@ -163,18 +193,11 @@ argument_list|,
 name|c
 argument_list|)
 expr_stmt|;
-comment|// add also with host only, to be able to find credential with host only
-comment|// (useful for httpclient especially)
-name|KEYRING
+name|SECURED_HOSTS
 operator|.
-name|put
+name|add
 argument_list|(
-name|c
-operator|.
-name|getHost
-argument_list|()
-argument_list|,
-name|c
+name|host
 argument_list|)
 expr_stmt|;
 block|}
@@ -189,14 +212,9 @@ name|String
 name|host
 parameter_list|)
 block|{
-return|return
-operator|(
-name|Credentials
-operator|)
-name|KEYRING
-operator|.
-name|get
-argument_list|(
+name|String
+name|key
+init|=
 name|Credentials
 operator|.
 name|buildKey
@@ -205,6 +223,42 @@ name|realm
 argument_list|,
 name|host
 argument_list|)
+decl_stmt|;
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"try to get credentials for: "
+operator|+
+name|key
+argument_list|)
+expr_stmt|;
+return|return
+operator|(
+name|Credentials
+operator|)
+name|KEYRING
+operator|.
+name|get
+argument_list|(
+name|key
+argument_list|)
+return|;
+block|}
+specifier|public
+name|boolean
+name|hasCredentials
+parameter_list|(
+name|String
+name|host
+parameter_list|)
+block|{
+return|return
+name|SECURED_HOSTS
+operator|.
+name|contains
+argument_list|(
+name|host
 argument_list|)
 return|;
 block|}
