@@ -137,6 +137,20 @@ name|commons
 operator|.
 name|httpclient
 operator|.
+name|Credentials
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|httpclient
+operator|.
 name|Header
 import|;
 end_import
@@ -253,7 +267,55 @@ name|httpclient
 operator|.
 name|auth
 operator|.
+name|AuthScheme
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|httpclient
+operator|.
+name|auth
+operator|.
 name|AuthScope
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|httpclient
+operator|.
+name|auth
+operator|.
+name|CredentialsNotAvailableException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|httpclient
+operator|.
+name|auth
+operator|.
+name|CredentialsProvider
 import|;
 end_import
 
@@ -344,20 +406,6 @@ operator|.
 name|util
 operator|.
 name|CopyProgressListener
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|ivy
-operator|.
-name|util
-operator|.
-name|Credentials
 import|;
 end_import
 
@@ -1732,82 +1780,28 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-name|Credentials
-name|c
-init|=
-name|getCredentials
-argument_list|(
-name|url
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
-name|c
-operator|!=
-literal|null
+name|useAuthentication
+argument_list|(
+name|url
+argument_list|)
 condition|)
 block|{
-name|Message
-operator|.
-name|debug
-argument_list|(
-literal|"found credentials for "
-operator|+
-name|url
-operator|+
-literal|": "
-operator|+
-name|c
-argument_list|)
-expr_stmt|;
 name|httpClient
 operator|.
-name|getState
+name|getParams
 argument_list|()
 operator|.
-name|setCredentials
+name|setParameter
 argument_list|(
-operator|new
-name|AuthScope
-argument_list|(
-name|c
+name|CredentialsProvider
 operator|.
-name|getHost
-argument_list|()
-argument_list|,
-name|AuthScope
-operator|.
-name|ANY_PORT
-argument_list|,
-name|c
-operator|.
-name|getRealm
-argument_list|()
-argument_list|)
+name|PROVIDER
 argument_list|,
 operator|new
-name|NTCredentials
-argument_list|(
-name|c
-operator|.
-name|getUserName
+name|IvyCredentialsProvider
 argument_list|()
-argument_list|,
-name|c
-operator|.
-name|getPasswd
-argument_list|()
-argument_list|,
-name|HostUtil
-operator|.
-name|getLocalHostName
-argument_list|()
-argument_list|,
-name|c
-operator|.
-name|getRealm
-argument_list|()
-argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -1845,31 +1839,12 @@ name|url
 parameter_list|)
 block|{
 return|return
-name|getCredentials
-argument_list|(
-name|url
-argument_list|)
-operator|!=
-literal|null
-return|;
-block|}
-specifier|private
-name|Credentials
-name|getCredentials
-parameter_list|(
-name|URL
-name|url
-parameter_list|)
-block|{
-return|return
 name|CredentialsStore
 operator|.
 name|INSTANCE
 operator|.
-name|getCredentials
+name|hasCredentials
 argument_list|(
-literal|null
-argument_list|,
 name|url
 operator|.
 name|getHost
@@ -2294,6 +2269,111 @@ name|int
 name|getHttpClientMajorVersion
 parameter_list|()
 function_decl|;
+block|}
+specifier|private
+specifier|static
+class|class
+name|IvyCredentialsProvider
+implements|implements
+name|CredentialsProvider
+block|{
+specifier|public
+name|Credentials
+name|getCredentials
+parameter_list|(
+name|AuthScheme
+name|scheme
+parameter_list|,
+name|String
+name|host
+parameter_list|,
+name|int
+name|port
+parameter_list|,
+name|boolean
+name|proxy
+parameter_list|)
+throws|throws
+name|CredentialsNotAvailableException
+block|{
+name|String
+name|realm
+init|=
+name|scheme
+operator|.
+name|getRealm
+argument_list|()
+decl_stmt|;
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|util
+operator|.
+name|Credentials
+name|c
+init|=
+operator|(
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|util
+operator|.
+name|Credentials
+operator|)
+name|CredentialsStore
+operator|.
+name|INSTANCE
+operator|.
+name|getCredentials
+argument_list|(
+name|realm
+argument_list|,
+name|host
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|c
+operator|!=
+literal|null
+condition|)
+block|{
+return|return
+operator|new
+name|NTCredentials
+argument_list|(
+name|c
+operator|.
+name|getUserName
+argument_list|()
+argument_list|,
+name|c
+operator|.
+name|getPasswd
+argument_list|()
+argument_list|,
+name|HostUtil
+operator|.
+name|getLocalHostName
+argument_list|()
+argument_list|,
+name|c
+operator|.
+name|getRealm
+argument_list|()
+argument_list|)
+return|;
+block|}
+return|return
+literal|null
+return|;
+block|}
 block|}
 block|}
 end_class
