@@ -21,6 +21,18 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|Field
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|Authenticator
@@ -77,30 +89,103 @@ name|IvyAuthenticator
 extends|extends
 name|Authenticator
 block|{
-comment|/**      * The sole instance.      */
-specifier|public
-specifier|static
-specifier|final
-name|IvyAuthenticator
-name|INSTANCE
-init|=
-operator|new
-name|IvyAuthenticator
-argument_list|()
+specifier|private
+name|Authenticator
+name|original
 decl_stmt|;
-comment|/**      * Private c'tor to prevent instantiation. Also installs this as the default Authenticator to      * use by the JVM.      */
+comment|/**      * Private c'tor to prevent instantiation.      */
 specifier|private
 name|IvyAuthenticator
+parameter_list|(
+name|Authenticator
+name|original
+parameter_list|)
+block|{
+name|this
+operator|.
+name|original
+operator|=
+name|original
+expr_stmt|;
+block|}
+comment|/**      * Installs an<tt>IvyAuthenticator</tt> as default<tt>Authenticator</tt>.      * Call this method before opening HTTP(S) connections to enable Ivy      * authentication.      */
+specifier|public
+specifier|static
+name|void
+name|install
 parameter_list|()
 block|{
-comment|// Install this as the default Authenticator object.
+comment|// We will try to use the original authenticator as backup authenticator.
+comment|// Since there is no getter available, so try to use some reflection to
+comment|// obtain it. If that doesn't work, assume there is no original authenticator
+name|Authenticator
+name|original
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|Field
+name|f
+init|=
+name|Authenticator
+operator|.
+name|class
+operator|.
+name|getDeclaredField
+argument_list|(
+literal|"theAuthenticator"
+argument_list|)
+decl_stmt|;
+name|original
+operator|=
+operator|(
+name|Authenticator
+operator|)
+name|f
+operator|.
+name|get
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|t
+parameter_list|)
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"Error occured while getting the original authenticator!"
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+operator|(
+name|original
+operator|instanceof
+name|IvyAuthenticator
+operator|)
+condition|)
+block|{
 name|Authenticator
 operator|.
 name|setDefault
 argument_list|(
-name|this
+operator|new
+name|IvyAuthenticator
+argument_list|(
+name|original
+argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 comment|// API ******************************************************************
 comment|// Overriding Authenticator *********************************************
@@ -270,6 +355,67 @@ argument_list|()
 operator|.
 name|toCharArray
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+operator|(
+name|result
+operator|==
+literal|null
+operator|)
+operator|&&
+operator|(
+name|original
+operator|!=
+literal|null
+operator|)
+condition|)
+block|{
+name|Authenticator
+operator|.
+name|setDefault
+argument_list|(
+name|original
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|result
+operator|=
+name|Authenticator
+operator|.
+name|requestPasswordAuthentication
+argument_list|(
+name|getRequestingHost
+argument_list|()
+argument_list|,
+name|getRequestingSite
+argument_list|()
+argument_list|,
+name|getRequestingPort
+argument_list|()
+argument_list|,
+name|getRequestingProtocol
+argument_list|()
+argument_list|,
+name|getRequestingPrompt
+argument_list|()
+argument_list|,
+name|getRequestingScheme
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|Authenticator
+operator|.
+name|setDefault
+argument_list|(
+name|this
 argument_list|)
 expr_stmt|;
 block|}
